--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-#These are the required libraries
-numpy
+#These are the requirements
+math 3.9.1
+matplotlib 3.3.3
+numpy 1.19.0
+shapely 1.7.1
+scipy 1.5.0
